# peer-review-agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
agent/: agent.py  app.py  memory.py  schemas.py  source_manager.py  tools.py
agent/prompts/: peer_reviewer_prompt.py
agent/sub_agents/: google_search_agent.py
agent/utils/: logger.py  pdf_generator.py
experiments/: agent.py
search_agent/tmp/search_agent/: root_agent.yaml
