[project]
name = "peer-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "google-adk>=1.19.0",
    "mem0ai>=0.1.115",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
]
